<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_existing_account">Login with an existing account</string>

    <string name="error_empty_field">Error!, field is empty</string>
    <string name="error_invalid_field_less_character">Error!, the field is less than the required characters</string>
    <string name="error_invalid_field_special_character"><![CDATA[Username must not contain .*[~!@#$%^&*()_=+|/,.\"\';:{}<>?].*]]></string>
    <string name="on_boarding">OnBoarding</string>
    <string name="welcome_onBoarding">welcome, OnBoarding Screen</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_screen">Instructions Screen</string>
    <string name="home_list">Home Shoe List</string>
    <string name="add_shoes">Add Shoe</string>
    <string name="menu_txt_main_screen">Shoe List</string>
    <string name="shoe_name">"Shoe Name: "</string>
    <string name="shoe_name_d">Shoe Name</string>
    <string name="company">"    Company: "</string>
    <string name="company_d">Company</string>
    <string name="shoe_size">"   Shoe Size: "</string>
    <string name="shoe_size_d">Shoe Size</string>
    <string name="description">"Description: "</string>
    <string name="description_d">Description</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="enter_company">Enter Company</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="enter_description">Enter Description</string>
    <string name="cancel">Cancel</string>
    <string name="save_shoe">Save Shoe</string>
    <string name="menu_txt_main_detail_screen">Detail Shoe</string>
    <string name="saved">Saved Successfully!</string>
    <string name="name_required">Name is required</string>
    <string name="company_required">Company is required</string>
    <string name="size_required">Size is required</string>
    <string name="description_required">Description is required</string>
    <string name="name_invalid">Name is Invalid</string>
    <string name="company_invalid">Company is Invalid</string>
    <string name="size_invalid">Size is Invalid</string>
    <string name="size_invalid_length">Size is Invalid ,max 2 characters</string>
    <string name="description_invalid">Description is Invalid , max 250 characters</string>
</resources>
