<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="details_fragment"
            type="com.udacity.shoestore.ui.details.view.DetailsFragment" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ui.details.viewmodel.DetailsShoeViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/lyParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.features.details.view.DetailsFragment">

        <include
            android:id="@+id/detailsToolbar"
            layout="@layout/common_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/textBoldStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_shoe"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/textMediumStyle"
                    android:text="@string/shoe_name"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etName"
                    style="@style/editTextStyle"
                    android:hint="@string/enter_shoe_name"
                    android:importantForAutofill="no"
                    android:text="@={viewModel.shoeName}" />

                <TextView
                    style="@style/textMediumStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/company"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etCompany"
                    style="@style/editTextStyle"
                    android:hint="@string/enter_company"
                    android:importantForAutofill="no"
                    android:text="@={viewModel.shoeCompany}" />

                <TextView
                    style="@style/textMediumStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/shoe_size"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etSize"
                    style="@style/editTextStyle"
                    android:ems="2"
                    android:hint="@string/enter_shoe_size"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@={viewModel.shoeSize}" />

                <TextView
                    style="@style/textMediumStyle"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    android:textColor="@color/purple_700"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/etDec"
                    style="@style/editTextStyle"
                    android:layout_height="72dp"
                    android:gravity="top|start"
                    android:hint="@string/enter_description"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:scrollIndicators="end"
                    android:scrollbarSize="48dp"
                    android:scrollbars="vertical|horizontal"
                    android:text="@={viewModel.shoeDescription}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:onClick="@{()-> details_fragment.onCancelClicked()}"
                        android:text="@string/cancel"
                        android:textAllCaps="true"
                        android:textAppearance="@style/textBoldStyle"
                        android:textColor="@color/teal_200"
                        android:textSize="14sp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1.7"
                        android:backgroundTint="@color/purple_700"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:onClick="@{()-> details_fragment.onSaveClicked()}"
                        android:text="@string/save_shoe"
                        android:textAllCaps="true"
                        android:textAppearance="@style/textBoldStyle"
                        android:textSize="14sp"
                        app:cornerRadius="16dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>